# hwmx

./: CMakeLists.txt  README
include/: Concepts.hpp  FixedVector.hpp  Matrix.hpp  Scanner.hpp  Slice.hpp
lib/: CMakeLists.txt  driver.cpp
test/: CMakeLists.txt  testsuite.rb
test/unit-tests/: CMakeLists.txt  Concepts.cpp  FixedVector.cpp  Matrix.cpp  Scanner.cpp  Slice.cpp
tools/: build.rb  cmake.rb  runtest.rb  util.rb
